--- a/css/StyleSheet1.css
+++ b/css/StyleSheet1.css
@@ -2,9 +2,32 @@
     line-height: 1.5;
 }
 
+#playDisp {
+    position:relative;
+    padding:0;
+}
+
 #display {
-    margin: 0;
-    padding: 10px;
-    width: 400px;
-    border: 3px solid #CC0;
+    position:absolute;
+    top:120px;
+    margin:0;
+    padding:10px;
+    width:940px;
+    height:100px;
+    border:3px solid #CC0;
+}
+
+#player {
+    position:absolute;
+    top:40px;
+}
+
+#input {
+    position:absolute;
+    top:630px;
+}
+
+#download {
+    position:absolute;
+    top:710px;
 }
