--- a/css/StyleSheet1.css
+++ b/css/StyleSheet1.css
@@ -15,11 +15,12 @@
     width:940px;
     height:100px;
     border:3px solid #CC0;
+    background-color:rgba(255, 255, 255, 0.7);
 }
 
 #player {
-    position:absolute;
-    top:40px;
+    position: absolute;
+    top: 40px;
 }
 
 #input {
