--- a/css/StyleSheet1.css
+++ b/css/StyleSheet1.css
@@ -12,10 +12,12 @@
     top:120px;
     margin:0;
     padding:10px;
-    width:940px;
+    width:735px;
     height:100px;
     border:3px solid #CC0;
     background-color:rgba(255, 255, 255, 0.7);
+    font-family:cursive;
+    font-size:30px;
 }
 
 #player {
@@ -26,6 +28,9 @@
 #input {
     position:absolute;
     top:630px;
+    width:735px;
+    font-family:cursive;
+    font-size:30px;
 }
 
 #download {
